--- a/MyAwesomeApp/Base.lproj/Main.storyboard
+++ b/MyAwesomeApp/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                                     <constraint firstAttribute="width" constant="297" id="tmR-q4-e2a"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -62,7 +62,7 @@
                                     <constraint firstAttribute="height" constant="21" id="xEA-8y-Gci"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e9k-gk-Gs8">
@@ -86,7 +86,7 @@
                                 </constraints>
                                 <state key="normal" title="Crash and Burn"/>
                                 <connections>
-                                    <action selector="crashAndBurn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8X9-2y-vmD"/>
+                                    <segue destination="7Iy-29-HgZ" kind="show" id="MXf-VY-AvI"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -106,6 +106,42 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="760" y="75"/>
+        </scene>
+        <!--View Controller2-->
+        <scene sceneID="5yB-yP-MNm">
+            <objects>
+                <viewController id="7Iy-29-HgZ" customClass="ViewController2" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="6GU-Tf-04T"/>
+                        <viewControllerLayoutGuide type="bottom" id="D5A-Y8-kS1"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="4IT-ZH-l0C">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You probably won't see me" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ee3-8a-JlD">
+                                <rect key="frame" x="197" y="289" width="206" height="21"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="TmL-Dd-EiD"/>
+                                    <constraint firstAttribute="width" constant="206" id="f7u-lS-Ff4"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ee3-8a-JlD" firstAttribute="centerY" secondItem="4IT-ZH-l0C" secondAttribute="centerY" id="D1P-y0-ZX4"/>
+                            <constraint firstItem="ee3-8a-JlD" firstAttribute="centerX" secondItem="4IT-ZH-l0C" secondAttribute="centerX" id="duS-Hg-iGi"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lvJ-bs-cMC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="760" y="890"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="eBA-1I-nu9">
